--- a/debian/control
+++ b/debian/control
@@ -13,7 +13,7 @@ Build-Depends: debhelper (>= 5),
  libcurl4-openssl-dev,
  libcocaine-dealer-dev (=0.9.4.2),
  libmsgpack-dev,
- eblob (= 0.17.8)
+ eblob (> 0.18)
 Standards-Version: 3.9.1
 
 Package: libelliptics-proxy
