--- a/debian/control
+++ b/debian/control
@@ -11,14 +11,14 @@ Build-Depends: debhelper (>= 5),
  elliptics-dev (>= 2.20), elliptics-dev (<< 2.21),
  elliptics-client (>= 2.20), elliptics-client (<< 2.21),
  libcurl4-openssl-dev,
- libcocaine-dealer-dev (=0.9.4.2),
+ libcocaine-dealer-dev (<< 0.9.10000),
  libmsgpack-dev,
  eblob (> 0.18)
 Standards-Version: 3.9.1
 
 Package: libelliptics-proxy
 Architecture: any
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, libcocaine-dealer1 (= 0.9.19.1-2)
 Description: Smart client for Elliptics storage
 
 Package: libelliptics-proxy-dbg
@@ -28,6 +28,6 @@ Description: Smart client for Elliptics storage (debug symbols)
 
 Package: libelliptics-proxy-dev
 Architecture: any
-Depends: libelliptics-proxy (= ${Source-Version}), libboost-dev, libcocaine-dealer-dev (=0.9.4.2), libmsgpack-dev
+Depends: libelliptics-proxy (= ${Source-Version}), libboost-dev, libcocaine-dealer-dev (= 0.9.19.1-2), libmsgpack-dev
 Description: Smart client for Elliptics storage (developer files)
 
