--- a/debian/control
+++ b/debian/control
@@ -18,7 +18,7 @@ Standards-Version: 3.9.1
 
 Package: libelliptics-proxy
 Architecture: any
-Depends: ${shlibs:Depends}, libcocaine-dealer1 (= 0.9.19.1-2)
+Depends: ${shlibs:Depends}, libcocaine-dealer1 (= 0.9.19.1-2), elliptics-client (<< 2.21)
 Description: Smart client for Elliptics storage
 
 Package: libelliptics-proxy-dbg
@@ -28,6 +28,6 @@ Description: Smart client for Elliptics storage (debug symbols)
 
 Package: libelliptics-proxy-dev
 Architecture: any
-Depends: libelliptics-proxy (= ${Source-Version}), libboost-dev, libcocaine-dealer-dev (= 0.9.19.1-2), libmsgpack-dev
+Depends: libelliptics-proxy (= ${Source-Version}), libboost-dev, libcocaine-dealer-dev (= 0.9.19.1-2), libmsgpack-dev, elliptics-dev (>= 2.20), elliptics-dev (<< 2.21)
 Description: Smart client for Elliptics storage (developer files)
 
