--- a/debian/control
+++ b/debian/control
@@ -11,14 +11,18 @@ Build-Depends: debhelper (>= 5),
  elliptics-dev (>= 2.20), elliptics-dev (<< 2.21),
  elliptics-client (>= 2.20), elliptics-client (<< 2.21),
  libcurl4-openssl-dev,
- libcocaine-dealer-dev (<< 0.9.10000),
+ cocaine-framework-native (>= 0.10.6.1),
+ cocaine-framework-native-dev (>= 0.10.6.1),
+ libcocaine-core2 (>= 0.10.6.5),
+ libcocaine-dev (>= 0.10.6.5),
  libmsgpack-dev,
+ libmastermind-dev (>= 6.3),
  eblob (> 0.18)
 Standards-Version: 3.9.1
 
 Package: libelliptics-proxy
 Architecture: any
-Depends: ${shlibs:Depends}, libcocaine-dealer1 (= 0.9.19.1-2), elliptics-client (<< 2.21)
+Depends: ${shlibs:Depends}, elliptics-client (<< 2.21)
 Description: Smart client for Elliptics storage
 
 Package: libelliptics-proxy-dbg
@@ -28,6 +32,6 @@ Description: Smart client for Elliptics storage (debug symbols)
 
 Package: libelliptics-proxy-dev
 Architecture: any
-Depends: libelliptics-proxy (= ${Source-Version}), libboost-dev, libcocaine-dealer-dev (= 0.9.19.1-2), libmsgpack-dev, elliptics-dev (>= 2.20), elliptics-dev (<< 2.21)
+Depends: libelliptics-proxy (= ${Source-Version}), libboost-dev, cocaine-framework-native-dev (>= 0.10.6.1), libmsgpack-dev, elliptics-dev (>= 2.20), elliptics-dev (<< 2.21)
 Description: Smart client for Elliptics storage (developer files)
 
